[package]
name = "sorting_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
futures-core = "*"
futures-util = "*"
rand = "*"
tokio = { version = "*", features = ["full"] }
